# terrella

./: .gitignore  .wslconfig  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  docker-compose.yaml  earth-ai.code-workspace  models.txt  provision.sh  pyproject.toml  wsl.conf
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  project.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  rfc.yml  spike.yml  task.yml
.github/workflows/: auto-close-epics.yml  changelog-check.yml  labeler.yml  pr-title-lint.yml  project-sync.yml  release.yml  reuse.yml  scorecard.yml
ai-observability/: README.md  docker-compose.yml
ai-observability/litellm/: config.yaml
ai-observability/prometheus/: prometheus.yml
ai-observability/scripts/: init-billing-table.sh
ai-stack/: README.md  machines.md  routing.md  subscriptions.md  tools.md
deploy/earth/: README.md  machines.md  manual-billing.md  subscriptions.md
docs/: 01-overview.md  README.md  project-management.md
docs/adr/: ADR-0001-installable-tool-python-cli.md  ADR-0002-podman-quadlets-runtime.md  ADR-0003-gateway-litellm-behind-driver-boundary.md  ADR-0004-dual-platform-distro-adapter.md  ADR-0005-multi-node-interfaces-no-a2a.md  ADR-0006-config-in-artifacts-out.md  ADR-0007-github-native-pm-framework.md  (+4 more)
provision/: README.md  models.list  provision.sh  sync-models.sh
scripts/: project-sync.sh
stack/: .env.example  .gitignore  README.md  continue.yaml.example  docker-compose.yml
terrella/: __init__.py
(+78 files in other folders)
